--- a/index.html
+++ b/index.html
@@ -59,16 +59,16 @@
             
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Descubra 6 ingredientes secretos da costa do Vietnã que faz com que você sinta menos fome e ajuda a queimar até 1 kg de gordura a cada 72horas</b></h3>
+            <h3 class="my-4"><b>Receita caseira: Descubra 6 ingredientes secretos da costa do Vietnã que faz você sentir menos fome durante o dia e ajuda a queimar até 1 kg de gordura a cada 72 horas</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_62279575aa8f7e00086fa73e">var s=document.createElement("script");s.src="https://cdn.converteai.net/ccdae62e-116b-492f-9648-160a0c5bfcc3/players/62279575aa8f7e00086fa73e/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <div id="vid_63fd720f7c18da000ae23d58" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_63fd720f7c18da000ae23d58" src="https://images.converteai.net/f9a584cf-a1b3-47bc-8716-d00fd78e71d3/players/63fd720f7c18da000ae23d58/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_63fd720f7c18da000ae23d58" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_63fd720f7c18da000ae23d58">var s=document.createElement("script");s.src="https://scripts.converteai.net/f9a584cf-a1b3-47bc-8716-d00fd78e71d3/players/63fd720f7c18da000ae23d58/player.js",s.async=!0,document.head.appendChild(s);</script>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO OBTER ACESSO!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
+              <a href="https://pay.kiwify.com.br/Jcx6Dbe" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO ACESSAR AGORA</span>
+                <span class="span-btn2"></span>
               </a>
             </div>
           </div>
@@ -445,9 +445,9 @@
             </div>
             <!-- Botão 2 -->
             <div id="cta2" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/HkrDVPl" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO OBTER ACESSO!</span>
-                <span class="span-btn2">(atenção: vagas limitadas)</span>
+              <a href="https://pay.kiwify.com.br/Jcx6Dbe" class="a-btn" style="text-decoration: none;">
+                <span class="span-btn">QUERO ACESSAR AGORA</span>
+                <span class="span-btn2"></span>
               </a>
             </div>
           </div>
@@ -460,7 +460,7 @@
     </footer>
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1637000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1281000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
