--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       t.src=v;s=b.getElementsByTagName(e)[0];
       s.parentNode.insertBefore(t,s)}(window, document,'script',
       'https://connect.facebook.net/en_US/fbevents.js');
-      fbq('init', '818679336042035');
-      fbq('track', 'ViewContent');
+      fbq('init', '87638218937219783');
+      fbq('track', 'kjdhjkahjkdsja');
     </script>
     <noscript><img height="1" width="1" style="display:none"
       src="https://www.facebook.com/tr?id=818679336042035&ev=PageView&noscript=1"
